--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "sweetalert2": "^11.7.11",
     "web-vitals": "^2.1.4"
   },
